# can-dash

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.ai/: agent_checklist.yaml
.github/workflows/: ci.yml
can-processor/: CMakeLists.txt  main.cpp
can_sim/: engine.py
config/: alarm_rules.yaml  can_ids.yaml  can_signal_status.yaml  derived_rules.yaml  display_layout.yaml  indicators.yaml  vehicle_thresholds.yaml
config/i18n/: en_US.json  zh_CN.json
docs/: PERFORMANCE.md
docs/requirements/: INDEX.md  REQ-ALM-003.md  REQ-ALM-004.md  REQ-ALM-005.md  REQ-ALM-006.md  REQ-ALM-007.md  REQ-ALM-008.md  REQ-ALM-009.md  REQ-ALM-010.md  REQ-ALM-011.md  REQ-ALM-012.md  REQ-HYBRID-001.md  REQ-HYBRID-006.md  REQ-IND-006.md  REQ-IND-007.md  REQ-IND-008.md  REQ-IND-009.md  REQ-IND-010.md  REQ-IND-011.md  REQ-IND-012.md  REQ-SIG-002.md  REQ-SYS-003.md  REQ-SYS-005.md
references/: can_socket_protocol.md  layer3_alarm_wiring.md  production_readiness_20260601.md  qml_headless_pitfalls.md  qml_z_ordering.md  shared_memory_ipc.md
schemas/: alarm_rules.schema.json  can_ids.schema.json  can_signal_status.schema.json  display_layout.schema.json  indicators.schema.json  seat_belt.schema.json  vehicle_thresholds.schema.json
src/: main.cpp
src/layer1/: display_data.h
src/layer1/shm/: shm_display.c  shm_display.cpp  shm_display.h
src/layer2/: alarm_runtime.cpp  alarm_runtime.h  can_converter.cpp  can_converter.h  can_signal_monitor.cpp  can_signal_monitor.h  chime_manager.cpp  chime_manager.h  display_manager.cpp  display_manager.h  event_bus.cpp  event_bus.h  indicator_runtime.cpp  indicator_runtime.h  language_manager.cpp  language_manager.h  limp_home_runtime.cpp  limp_home_runtime.h  seat_belt_runtime.cpp  seat_belt_runtime.h  settings_manager.cpp  settings_manager.h  theme_manager.cpp  theme_manager.h  time_util.cpp  time_util.h  vehicle_logic.cpp  vehicle_logic.h  view_manager.cpp  view_manager.h  warning_manager.cpp  warning_manager.h
src/layer3/: can_receiver_qt.cpp  can_receiver_qt.h  dashboard_backend.cpp  dashboard_backend.h  dashboard_backend_qt.cpp  dashboard_backend_qt.h  display_data_types.h  file_logger.cpp  file_logger.h  qml_logger_bridge.cpp  qml_logger_bridge.h  qt_data_binder.cpp  qt_data_binder.h  shm_data_source.cpp  shm_data_source.h
src/ui/: AlarmBanner.qml  AlarmBannerItem.qml  BarIndicator.qml  ChimePanel.qml  DashboardMain.qml  DerivedMetrics.qml  EnergyFlowDiagram.qml  GaugeCanvas.qml  GaugeControl.qml  IndicatorLight.qml  LimpHomePanel.qml  LogPanel.qml  MetricCell.qml  MotorRPMGauge.qml  QmlLogger.qml  SeatBeltZone.qml  SettingsPanel.qml  Sparkline.qml  SpeedGauge.qml  TripPanel.qml  WarningLight.qml  WarningPanel.qml
tests/: test_alarm_runtime.cpp  test_can_converter.cpp  test_can_receiver_qt.cpp  test_can_signal_monitor.cpp  test_chime_data_flow.cpp  test_chime_manager.cpp  test_dashboard_backend.cpp  test_event_bus.cpp  test_indicator_runtime.cpp  test_limp_home_runtime.cpp  test_perf_baseline.cpp  test_rule_engine.cpp  test_seat_belt_runtime.cpp  test_settings_manager.cpp  test_shm_data_source.cpp  test_shm_display.cpp  test_theme_manager.cpp  test_time_util.cpp  test_trip_computer.cpp  test_vehicle_logic.cpp  test_view_manager.cpp  test_warning_manager.cpp
tools/: fix_generated.py  fix_yaml_templates.py  run_cppcheck.sh  validate.py  yaml_to_c.py
